--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: preconditions
 description: Pure Dart library for management of preconditions in Flutter apps. Has the user granted all permissions? Is the phone online? Is there enough free disk space?
 version: 0.0.2
-author:
-homepage:
+homepage: https://github.com/fnx-io/preconditions
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
